@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "10 January 2021" "" ""
+.TH TURN 1 "12 March 2021" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client
@@ -815,9 +815,18 @@ will make an attempt to change the current group ID to that group.
 .TP
 .B
 \fB\-K\fP, \fB\-\-keep\-address\-family\fP
+Deprecated and will be removed in favor of \fB\-\-allocation\-default\-address\-family\fP!!
 TURN server allocates address family according TURN
 Client <=> Server communication address family.
 !! It breaks RFC6156 section\-4.2 (violates default IPv4) !!
+.TP
+.B
+\fB\-A\fP \fB\-\-allocation\-default\-address\-family\fP=<ipv4|ipv6|keep>
+Default is IPv4
+TURN server allocates address family according TURN client requested address family.
+If address family not requested explicitly by the client, then it falls back to this default.
+The standard RFC explicitly define that this default must be IPv4, 
+so use other option values with care!
 .TP
 .B
 \fB\-\-cli\-ip\fP
