@@ -332,7 +332,7 @@ typedef struct _turn_params_ {
   ///////// Encryption /////////
   char secret_key_file[1025];
   unsigned char secret_key[1025];
-  int keep_address_family;
+  ALLOCATION_DEFAULT_ADDRESS_FAMILY allocation_default_address_family;
   int no_auth_pings;
   int no_dynamic_ip_list;
   int no_dynamic_realms;
