@@ -6,6 +6,8 @@ Version 4.5.3 'dan Eider':
 	- typo fix in prometheus (by fcecagno)
 	- merge PR #687 (by Wuelber Castillo)
 		* Add hash algorithm for hmackey value to redis userdb schema docs
+	- Replace keep-address-family with allocation-default-address-family (keep-address-family deprecated and will be removed!!)
+
 10/01/2021 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
 Version 4.5.2 'dan Eider':
 	- fix null pointer dereference in case of out of memory. (thanks to Thomas Moeller for the report)
